# Auto-VAPT

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  start.sh
.github/workflows/: ci.yml  vapt-scan.yml
auto_vapt/: __init__.py  ci.py  cli.py  config.py  crawler.py  diff.py  logger.py  models.py  notifications.py  orchestrator.py  plugins.py  rate_limiter.py
auto_vapt/reporting/: generator.py
auto_vapt/scanners/: __init__.py  auth_failures.py  base.py  broken_access.py  crypto.py  data_integrity.py  injection.py  insecure_design.py  logging_failures.py  misconfig.py  profiler.py  ssrf.py  vulnerable_components.py  zap_scanner.py
ci-templates/: gitlab-ci.yml
configs/: default.yaml
dashboard/: __init__.py  app.py  database.py
dashboard/frontend/: package-lock.json
dashboard/frontend/src/: App.css  App.jsx  api.js  index.css
tests/: test_crawler_live.py  test_integration.py  test_models.py
