[tool.poetry]
name = "auto-vapt"
version = "1.0.0"
description = "CI/CD Integrated Vulnerability Assessment & Penetration Testing Pipeline"
authors = ["uchiha"]
readme = "README.md"
license = "MIT"
packages = [{include = "auto_vapt"}]

[tool.poetry.scripts]
auto-vapt = "auto_vapt.cli:cli"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1"
rich = "^13.7"
pydantic = "^2.6"
pyyaml = "^6.0"
httpx = "^0.27"
jinja2 = "^3.1"
python-nmap = "^0.7"
structlog = "^24.1"
beautifulsoup4 = "^4.12"
lxml = "^5.1"
fastapi = "^0.110"
uvicorn = {version = "^0.27", extras = ["standard"]}
websockets = "^12.0"
aiosqlite = "^0.20"
weasyprint = {version = "^62.0", optional = true}

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.23"
pytest-cov = "^4.1"
ruff = "^0.3"
mypy = "^1.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
